bookstore-chart/templates/stock-api/bookstore-stock-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstore-stock-api
    app.kubernetes.io/component: bookstore-stock-api
    app.kubernetes.io/instance: bookstore-stock-api
  name: bookstore-stock-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bookstore-stock-api
  sessionAffinity: None
  type: ClusterIP
